adding Azure function to generate qrcode

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
   <main>
     <h1>Alara's ILP Project</h1>
 
+    WLT strives to help property owners managing their land to maximize natural habitats and increase conservation values. To that end, we have produced a guide to naturalized landscapes to help property owners make their property more beautiful and attractive to plants and wildlife of all kinds. The conservation and stewardship of our land resources has important practical values. It leads to healthy air, food and drinking water; reduced consumption and dependency on energy; protection and enhancement of wildlife populations; and the fostering of diversity within the landscape.
+
+    <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/Log-Fungus-300x292.jpg">
+
     <div>Please scan the QRCode below to go to my website:</div>
     <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
   
