Adding Rusty Blackhaw

--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Alara's ILP project</title>
+  <title>Rusty Blackhaw</title>
 </head>
 
-<body>
+<body style="background-color: bisque;">
   <main>
-    <h1>Alara's ILP Project</h1>
+    <h1>Rusty Blackhaw</h1>
 
-    WLT strives to help property owners managing their land to maximize natural habitats and increase conservation values. To that end, we have produced a guide to naturalized landscapes to help property owners make their property more beautiful and attractive to plants and wildlife of all kinds. The conservation and stewardship of our land resources has important practical values. It leads to healthy air, food and drinking water; reduced consumption and dependency on energy; protection and enhancement of wildlife populations; and the fostering of diversity within the landscape.
+    Rusty Blackhaw (Viburnum rufidulum) is a plant species native to the Eastern and Central United States. Rusty Blackhaw flowers 
+    in spring with small white blossoms that mature into blue drupes in the fall. This species is often planted in gardens.
 
-    <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/Log-Fungus-300x292.jpg">
+    <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/RustyBlackhaw.jpg">
 
     <div>Please scan the QRCode below to go to my website:</div>
     <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
