Rename image extension for rusty blackhaw

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,9 @@
   <main>
     <h1>Rusty Blackhaw</h1>
 
-    Rusty Blackhaw (Viburnum rufidulum) is a plant species native to the Eastern and Central United States. Rusty Blackhaw flowers 
-    in spring with small white blossoms that mature into blue drupes in the fall. This species is often planted in gardens.
+    <div>Rusty Blackhaw (Viburnum rufidulum) is a plant species native to the Eastern and Central United States. Rusty Blackhaw flowers 
+    in spring with small white blossoms that mature into blue drupes in the fall. This species is often planted in gardens.</div>
+
 
     <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/RustyBlackhaw.jpg">
 
