--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     in spring with small white blossoms that mature into blue drupes in the fall. This species is often planted in gardens.</div>
 
 
-    <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/RustyBlackhaw.jpg">
+    <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/RustyBlackhaw-image.jpg">
 
     <div>Please scan the QRCode below to go to my website:</div>
     <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
