--- a/src/index.html
+++ b/src/index.html
@@ -5,29 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>Rusty Blackhaw</title>
+  <title>Rye Neck Plants</title>
 </head>
 
-<body style="background-color: bisque;">
+<body class="container-fluid">
   <main>
-    <h1>Rusty Blackhaw</h1>
-
-    <div>Rusty Blackhaw (Viburnum rufidulum) is a plant species native to the Eastern and Central United States. Rusty Blackhaw flowers 
-    in spring with small white blossoms that mature into blue drupes in the fall. This species is often planted in gardens.</div>
-
-
-    <img style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="images/RustyBlackhaw-image.jpg">
-
-    <div>Please scan the QRCode below to go to my website:</div>
-    <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
-  
+    <h1>Rye Neck Plants</h1>
+    <ul>
+      <li>
+        <a href="rustyblackhaw.html" target="_blank"> 
+          Rusty Blackhaw
+        </a>
+      </li>
+    </ul>
   </main>
 
 
 
   <script>
     (async function() {
-        const { code } = await( await fetch(`/api/CodeGeneratorTrigger?text=https://nice-beach-00d863b0f.azurestaticapps.net/`)).json();
+        const { code } = await( await fetch(`/api/CodeGeneratorTrigger?text=https://www.ryeneckplants.com/`)).json();
         document.querySelector('#myimage').src = code;
     }())
     </script>
