Using ryeneckplants.com instead

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         </a>
       </li>
     </ul>
+    <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
   </main>
 
 
