--- a/src/rustyblackhaw.html
+++ b/src/rustyblackhaw.html
@@ -26,7 +26,7 @@
 
   <script>
     (async function() {
-        const { code } = await( await fetch(`/api/CodeGeneratorTrigger?text=https://nice-beach-00d863b0f.azurestaticapps.net/rustyblackhaw.html`)).json();
+        const { code } = await( await fetch(`/api/CodeGeneratorTrigger?text=https://www.ryeneckplants.com/rustyblackhaw.html`)).json();
         document.querySelector('#myimage').src = code;
     }())
     </script>
