Adding common mugwort page

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
           Rusty Blackhaw
         </a>
       </li>
+      <li>
+        <a href="commonmugwort.html" target="_blank"> 
+          Common Mugwort
+        </a>
+      </li>
     </ul>
     <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
   </main>
