Adding Creeping Juniper & Shortpod Mustard plants

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,16 @@
           Common Mugwort
         </a>
       </li>
+      <li>
+        <a href="creepingjuniper.html" target="_blank"> 
+          Creeping Juniper
+        </a>
+      </li>
+      <li>
+        <a href="shortpodmustard.html" target="_blank"> 
+          Shortpod Mustard
+        </a>
+      </li>
     </ul>
     <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
   </main>
