Adding characterictics image for Creeping Mugwort plant

--- a/src/creepingjuniper.html
+++ b/src/creepingjuniper.html
@@ -19,7 +19,18 @@
     <br />
     <img style="max-width:100%;height:auto;margin:0 auto" src="images/CreepingJuniper-image.jpeg">
 
- 
+    <h4>What are the symptoms of creeping juniper poisoning?</h4>
+    <div>
+      Creeping juniper has berries that, if ingested, may be mildly toxic to humans. 
+      Though not nearly as toxic as some other species of junipers, the "berries" (actually female seed cones), if eaten in significant quantities, 
+      may cause upset stomach, vomiting, diarrhea, and, in extreme cases, kidney issues. Creeping juniper is a fairly popular evergreen groundcover in cold-temperate areas, with a distinctive look that makes it hard to mistake for edible plants. Cases of creeping juniper poisoning via ingestion are therefore very rare.
+    </div>
+    <br />
+
+    <div>
+      <img style="max-width:100%;height:auto;margin:0 auto" src="images/creepingjuniper-characteristics.jpg">
+    </div>
+
     <div>Please scan the QRCode below to go to my website:</div>
     <img id="myimage" style="margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="">
   
