--- a/src/commonmugwort.html
+++ b/src/commonmugwort.html
@@ -18,7 +18,7 @@
         properties, so believers also use it to sweep their floors to give them both a spiritiual and physical cleaning.
     </div>
     <br />
-    <img style="max-width:100%;height:auto;margin:0 auto" src="images/mugwort-image.jpg">
+    <img style="max-width:100%;height:auto;margin:0 auto" src="images/Mugwort-image.jpg">
 
     <h4>Tips from Garden Coaches</h4>
     <div>
